--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
